# specstrom

./: .ghci  .ghcid  .gitignore  AUTHORS  Evaluator.hs  LICENSE  Lexer.hs  Main.hs  Parser.hs  PrettyPrinter.hs  README.md  audioplayer.strom  default.nix  flake.nix  hie.yaml  ltl.strom  quickstrom-proto.cabal  shell.nix  specstrom.cabal  test.strom  test2.strom  todomvc.strom
.github/workflows/: format.yml  test.yml
case-studies/gitlab/: gitlab.spec.purs  run.sh
cli/: Main.hs  REPL.hs  Util.hs
doc-gen/: Main.hs  template.html
docs/: protocol.org  quickltl-notes.org
editor-support/emacs/: specstrom-mode.el
editor-support/vscode/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
emacs/: specstrom-mode.el
examples/: audioplayer.strom
lib/Specstrom/: Action.hs  Analysis.hs  Channel.hs  Checker.hs  Dependency.hs  ElementState.hs  Evaluator.hs  Lexer.hs  Load.hs  Parser.hs  PrettyPrinter.hs  StreamingVerifier.hs  Syntax.hs  TypeInf.hs  Verifier.hs
nix/: nixpkgs.nix
rust/: Cargo.toml  shell.nix  test.strom
rust/earlgrey_generic/: Cargo.toml
rust/earlgrey_generic/examples/: arith.rs
rust/earlgrey_generic/src/: grammar.rs  items.rs  parser.rs  trees.rs
rust/proptest-regressions/: files.txt
rust/src/: error.rs  files.rs  lexer.rs  main.rs  parser.rs
rust/tools/: format-code.sh
test/: Main.hs  test.strom  test2.strom  todomvc.strom
test/Specstrom/: AnalysisTest.hs  CheckerTest.hs  Gen.hs  (+3 more)
tools/: format-code.sh
ulib/: control.strom  list.strom  logic.strom  ltl.strom  math.strom  quickstrom.strom
(+6 files in other folders)
