[package]
name = "specstrom"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peeking_take_while = "1.0.*"
serde_json = "1.0.*"
ordered-float = "*"

[dependencies.earlgrey_generic]
path = "earlgrey_generic"

[dev-dependencies]
proptest = "1.0.0"